# langchain-mongodb

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/scripts/: check_diff.py
.github/workflows/: _codespell.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  ci.yml
libs/langchain-mongodb/: CHANGELOG.md  Makefile  justfile  pyproject.toml
libs/langchain-mongodb/langchain_mongodb/: docstores.py  index.py  indexes.py  loaders.py  utils.py  vectorstores.py
libs/langchain-mongodb/langchain_mongodb/retrievers/: full_text_search.py  hybrid_search.py
libs/langchain-mongodb/langchain_mongodb/vector_stores/: __init__.py  async_io.py  base.py  sync_io.py
libs/langchain-mongodb/tests/: utils.py
libs/langchain-mongodb/tests/integration_tests/: conftest.py  test_cache.py  test_chain_example.py  test_chat_message_histories.py  test_docstore.py  test_index.py  test_indexes.py  test_loaders.py  test_mmr.py  test_parent_document.py  test_retrievers.py  test_vectorstore_add_delete.py  test_vectorstore_async.py  test_vectorstore_from_documents.py  test_vectorstore_from_texts.py
libs/langchain-mongodb/tests/unit_tests/: test_async_vectorstores.py
libs/langgraph-checkpoint-mongodb/: CHANGELOG.md  Makefile  justfile  pyproject.toml
libs/langgraph-checkpoint-mongodb/langgraph/checkpoint/mongodb/: __init__.py  aio.py  utils.py
libs/langgraph-checkpoint-mongodb/tests/__snapshots__/: test_pregel.ambr  test_pregel_async.ambr
libs/langgraph-checkpoint-mongodb/tests/integration_tests/: any_str.py  conftest.py  fake_chat.py  memory_assert.py  messages.py  test_interruption.py  test_prebuilt.py  test_pregel.py  test_pregel_async.py
libs/langgraph-checkpoint-mongodb/tests/integration_tests/__snapshots__/: test_pregel.ambr  test_pregel_async.ambr
libs/langgraph-checkpoint-mongodb/tests/unit_tests/: test_async.py  test_sync.py
libs/mongodb/: Makefile  pyproject.toml
libs/mongodb/langchain_mongodb/: chat_message_histories.py  index.py
libs/mongodb/langchain_mongodb/retrievers/: parent_document.py
libs/mongodb/tests/: utils.py
libs/mongodb/tests/integration_tests/: test_cache.py  test_chain_example.py  test_docstore.py  test_index.py  test_mmr.py  test_parent_document.py  test_retrievers.py  test_vectorstore_add_delete.py  test_vectorstore_from_documents.py  test_vectorstore_from_texts.py
libs/mongodb/tests/unit_tests/: test_index.py
scripts/: setup_ollama.sh  start_local_atlas.sh
