
[build-system]
requires = ["hatchling>1.24"]
build-backend = "hatchling.build"

[project]
name = "langchain-mongodb"
version = "0.3.0"
description = "An integration package connecting MongoDB and LangChain"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.3",
    "langchain>=0.3",
    "pymongo>=4.6.1",
    "langchain-text-splitters>=0.3",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "freezegun>=1.2.2",
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-text-splitters>=0.3.5",
    "pytest-mock>=3.10.0",
    "pytest>=7.3.0",
    "syrupy>=4.0.2",
    "pytest-watcher>=0.3.4",
    "pytest-asyncio>=0.21.1",
    "mongomock>=4.2.0.post1",
    "pre-commit>=4.0",
    "mypy>=1.10",
    "simsimd>=5.0.0",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.14",
    "pypdf>=5.0.1",
]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "I",  # isort
]
lint.ignore = ["E501", "B008", "UP007", "UP006", "UP035"]

[tool.coverage.run]
omit = ["tests/*"]
