[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-mongodb"
version = "0.2.0"
description = "An integration package connecting MongoDB and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-mongodb"
license = "MIT"

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-mongodb/tree/main/libs/mongodb"
"Release Notes" = "https://github.com/langchain-ai/langchain-mongodb/releases"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.6.1"
langchain-core = "^0.3"
langchain = "^0.3"
langchain-text-splitters = "^0.3"
motor = "^3.5"

[[tool.poetry.dependencies.numpy]]
version = "^1"
python = "<3.12"

[[tool.poetry.dependencies.numpy]]
version = "^1.26.0"
python = ">=3.12"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
syrupy = "^4.0.2"
pytest-watcher = "^0.3.4"
pytest-asyncio = "^0.21.1"
langchain = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/langchain"}
langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
langchain-text-splitters = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/text-splitters"}
mongomock = "^4.2.0.post1"


[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.test_integration.dependencies]
langchain-openai = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/openai"}
langchain-community = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/community"}
pypdf = "^5.0.1"

[tool.poetry.group.lint.dependencies]
ruff = ">=0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
simsimd = "^5.0.0"
langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
